# test_django

./: README.md  db_kz.sqlite3  db_rus.sqlite3  db_users.sqlite3  pyproject.toml  req.txt  test_db.sqlite3
db_routers/: routers.py
ref/: admin.py  models.py  utils.py  views.py
ref/migrations/: 0001_initial.py  0002_page.py  0003_alter_page_unique_together_alter_page_site.py
templates/admin/: index.html
test_django/: settings.py  settings_kz.py  urls.py  utils.py
