[tool.poetry]
name = "test-django"
version = "0.1.0"
description = ""
authors = ["kristina <tabunchik@doanddot.com>"]
readme = "README.md"
packages = [{include = "test_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
